hackathonnet-pvc-test-cluster-openstack/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackathonnet-backend
  namespace: hackathonnet
  labels:
    app: hackathonnet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackathonnet-backend
  template:
    metadata:
      labels:
        app: hackathonnet-backend
    spec:
      containers:
        - name: hackathonnet
          image: elyeshub/hackathonnet-backend:v2  #springboot:v3
          ports:
            - containerPort: 8089
