hackathonnet-pvc-test-cluster-openstack/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hackathonnet-frontend-service
  namespace: hackathonnet
spec:
  selector:
    app: hackathonnet-frontend
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80          # Port inside the cluster (ClusterIP)
      targetPort: 80    # Container port
      nodePort: 30080   # External port on the node (must be between 30000–32767)
